# blockx

./: .gitignore  Makefile  README.md  dfx.json
backend/: Cargo.toml
backend/src/: asset.rs  blockx_rust.did  err.rs  hash.rs  lib.rs  store.rs  user.rs  utils.rs
declarations/blockx_backend/: blockx_backend.did  blockx_backend.did.js  index.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/scripts/: gen_bindings.sh
frontend/src/: App.js  App.jsx  Greeting.jsx  main.jsx  routes.jsx  utils.js
frontend/src/components/: About.jsx  CertificatePDF.jsx  DashboardPage.jsx  Header.jsx  LandingPage.jsx  LoginPage.jsx  LoginPage_older.jsx  LoginPage_test.jsx  ProtectedRoute.jsx  RegistrationCard.jsx  RegistrationPage.css  RegistrationPage.jsx  RegistrationPage_test.jsx  VerifyProperty.jsx
frontend/src/components/auth/: InternetIdentity.jsx  LoginPage.jsx  ProtectedRoute.jsx
frontend/src/components/context/: AuthContext.jsx  InternetIdentityContext.jsx
frontend/src/components/dashboard/: DashboardLayout.jsx  RegisterProperty.jsx  VerifyProperty.jsx
frontend/src/components/landing/: LandingPage.jsx
frontend/src/components/ui/: AssetItem.jsx  DownloadCertBtn.jsx  FileUpload.jsx  WalletButton.jsx
frontend/src/controller/: controller.js
frontend/src/declarations/encrypted_notes/: encrypted_notes.did.d.ts  encrypted_notes.did.js  index.d.ts  index.js
frontend/src/pages/: NotFound.jsx
frontend/src/styles/: globals.css  registration.css
