[package]
name = "blockx"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18.3"
ic-stable-structures = "0.6.4"
lazy_static = "1.4.0"
serde_json = "1.0.108"
anyhow = "1.0.75"
serde = "1"
hex = "0.4.3"
sha2 = "0.10.9"
ic-cdk-macros = "0.18.5"
ciborium = "0.2.2"

[dev-dependencies]
pocket-ic = "9.0.2"
